--- a/static/css/pitch_detector.css
+++ b/static/css/pitch_detector.css
@@ -15,6 +15,8 @@ body {
 	font-family: Arial, sans-serif;
 	background-color: #1a1a1a;
 	color: #ffffff;
+	display: flex;
+	justify-content: center;
 }
 
 canvas {
@@ -23,7 +25,7 @@ canvas {
 	height: 200px;
 	background: white;
 	display: block;
-	margin: 10px 10px 10px 170px;
+	margin: 10px 10px 10px 100px;
 	border-radius: 10px;
 	position: relative;
 	top: 30px;
@@ -35,7 +37,7 @@ canvas {
 	gap: 150px;
 	width: 1000px;
 	height: auto;
-	margin: 50px 0 0 170px;
+	margin: 50px 0 0 100px;
 }
 
 .detail-left {
