--- a/templates/sheet_editor.html
+++ b/templates/sheet_editor.html
@@ -174,6 +174,7 @@
 		const pdf = scoreView.getMusicXML();
 		pdf.done((xml) => {
 			if (xml) {
+				console.log(xml);
 				fetch('/save_pdf', {
 					method: 'POST',
 					headers: {
