--- a/templates/sheet_music.html
+++ b/templates/sheet_music.html
@@ -9,7 +9,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="/static/logo/music_note_white.png">
-	<title>MusicXML Sheet</title>
+	<title>Sheet Music</title>
 	<script src="https://cdn.jsdelivr.net/npm/opensheetmusicdisplay@1.9.0/build/opensheetmusicdisplay.min.js"></script>
 	<link rel="stylesheet" href="/static/css/sheet_music.css">
 	<link rel="stylesheet" href="/static/css/button.css">
@@ -343,6 +343,19 @@
 				if (!nextButton.disabled) {
 					nextButton.click();
 				}
+			}
+			
+			if (event.key === "ArrowLeft") {
+				// Previous note
+				if (beat <= 0) return;
+				beat--;
+				osmdCursor.reset(); // quay lại từ đầu
+				for (let i = 0; i < beat; i++) {
+					osmdCursor.next();
+				}
+				osmd.cursor.show();
+				osmd.cursor.cursorElement.scrollIntoView({ behavior: "smooth", block: "center" });
+				updatenote();
 			}
 		});
 		
