--- a/templates/sheet_editor.html
+++ b/templates/sheet_editor.html
@@ -227,7 +227,7 @@
 							return;
 						}
 					}
-					
+					console.log(sessionStorage.getItem("exist_id"));
 					fetch('/save_musicxml', {
 						method: 'POST',
 						headers: {
